2008-08-24  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (scale): removed optimization of
	the case where the source and dest regions are the same size. This
	should not happen any longer.

2008-08-24  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (determine_scale): avoid
	unnecessary scaling when scaling factor is 2^n.
	(pixel_average): replaced with optimized pixel averager from
	tile-pyramid.c (from the gimp-2-4 branch with some minor
	corrections).

2008-08-23  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (scale): replaced code that
	copies pixels from one tile-manager to another by a call to
	copy_region().

2008-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: return with a proper PDB status type
	depending on the result of gtk_print_operation_run(). When run
	non-interactively, pass the error message with the return values.

2008-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/coolmetal-logo.scm: applied patch
	from LightningIsMyName. Changes the script to not break if called
	on a floating selection (bug #327681).

2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>

	* app/core/gimpgradient.c (gimp_gradient_segment_range_delete):
	Don't dereference final_start_seg and final_end_seg if NULL.

2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>

	Fix indentation in previous patch.

	* tools/pdbgen/pdb/gradient.pdb
	* app/pdb/gradient-cmds.c

2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>

	* tools/pdbgen/pdb/gradient.pdb
	(gimp_gradient_segment_range_blend_(colors|opacity)): Don't crash 
	if the index of the last segment is out of range.

	* app/pdb/gradient-cmds.c: regenerated.

2008-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/twain/Makefile.am: dropped use of AM_LDFLAGS completely
	and use target-specific LDFLAGS instead.

2008-08-23  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_init): only create and